# torch-projectors

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  TECHNICAL_BRIEF.md  generate_metal_headers.py  operatorstutorial.txt  pyproject.toml  research.md  setup.py
.github/workflows/: build-wheels.yml  publish-wheelhouse.yml  test-linux.yml  test-mac.yml  test-wheels.yml  test-windows.yml
csrc/: torch_projectors.cpp
csrc/cpu/: cpu_kernels.cpp  cpu_kernels.h
csrc/cpu/2d/: backprojection_2d_kernels.cpp  backprojection_2d_kernels.h  projection_2d_kernels.cpp  projection_2d_kernels.h
csrc/cpu/3d/: backprojection_2d_to_3d_kernels.cpp  backprojection_2d_to_3d_kernels.h  backprojection_3d_kernels.cpp  backprojection_3d_kernels.h  projection_3d_kernels.cpp  projection_3d_kernels.h  projection_3d_to_2d_kernels.cpp  projection_3d_to_2d_kernels.h
csrc/cpu/common/: atomic_ops.h  cubic_kernels.h  fftw_sampling.h  interpolation_kernels.h  projection_utils.h
csrc/cuda/: cuda_kernels.cu
csrc/cuda/2d/: backprojection_2d_kernels.cu  backprojection_2d_kernels.h  projection_2d_kernels.cu  projection_2d_kernels.h
csrc/cuda/3d/: backprojection_2d_to_3d_kernels.cu  backprojection_2d_to_3d_kernels.h  projection_3d_to_2d_kernels.cu  projection_3d_to_2d_kernels.h
csrc/mps/: mps_kernels.h  mps_kernels.mm  projection_kernels.h  projection_kernels.metal
csrc/mps/2d/: backproject_2d_back.metal  backproject_2d_forw.metal  backproject_utilities_2d.metal  backprojection_2d_kernels.h  backprojection_2d_kernels.mm  backward_2d.metal  backward_backproject_2d.metal  forward_2d.metal  forward_backproject_2d.metal  project_2d_back.metal  project_2d_forw.metal  projection_2d_kernels.h  projection_2d_kernels.mm  utilities_2d.metal
csrc/mps/3d/: backproject_2d_to_3d_back.metal  backproject_2d_to_3d_forw.metal  backproject_utilities_3d.metal  backprojection_2d_to_3d_kernels.h  backprojection_2d_to_3d_kernels.mm  backward_3d_to_2d.metal  forward_3d_to_2d.metal  project_3d_to_2d_back.metal  project_3d_to_2d_forw.metal  projection_3d_to_2d_kernels.h  projection_3d_to_2d_kernels.mm  utilities_3d.metal
paper/: instructions.txt  main.tex  references.bib  style-example.txt  verify_equations.py
paper/results/: json_to_latex.py  make_tables.sh  oversampling_table_generator.py  run_benchmarks_linux.sh  run_benchmarks_mac.sh  strategy.md
paper/results/benchmarks/: backward_2d.py  backward_2d_to_3d.py  backward_2d_to_3d_comparison.py  benchmark_base.py  forward_2d.py  forward_3d_to_2d.py  forward_3d_to_2d_comparison.py  interpolation_accuracy.py  oversampling_backprojection_benchmark.py  oversampling_benchmark.py
paper/results/data/backward_2d/: h100-cuda.json  m4-cpu.json  m4-mps.json  test-cpu.json
paper/results/data/backward_2d_to_3d/: h100-cuda.json  m4-cpu.json  m4-mps.json
paper/results/data/backward_2d_to_3d_comparison/: h100-cuda.json  m4-cpu.json
paper/results/data/forward_2d/: h100-cuda.json  m4-cpu.json  m4-mps.json
paper/results/data/forward_3d_to_2d/: h100-cuda.json  m4-cpu.json  m4-mps.json
paper/results/data/forward_3d_to_2d_comparison/: h100-cuda.json  m4-cpu.json
paper/results/data/interpolation_accuracy/: combined-mps.json  combined.json
paper/results/data/oversampling_backprojection_benchmark/: m4-cpu.json  m4-mps.json
paper/results/data/oversampling_benchmark/: h100-cuda.json  mac-cpu.json  mac-mps.json
paper/results/make-tables/: comparison_to_latex.py  make_tables.sh  oversampling_table_generator.py
paper/results/tables/: backproject-2d-performance.tex  backproject-2d-to-3d-comparison.tex  backproject-2d-to-3d-performance.tex  oversampling-table.tex  project-2d-performance.tex  project-3d-to-2d-comparison.tex  project-3d-to-2d-performance.tex
tests/: conftest.py  test_batching.py  test_gradients.py  test_ops.py  test_utils.py
tests/2d/: __init__.py  test_basic_projection.py  test_cross_platform.py  test_gradients.py  test_performance.py  test_visual_validation.py
tests/2d/back/: test_basic_backprojection.py  test_batching_back.py  test_cross_platform_back.py  test_gradients_back.py  test_oversampling_back.py  test_performance_back.py  test_visual_validation_back.py
tests/2d/forw/: test_basic_projection.py  test_batching.py  test_cross_platform.py  test_gradients.py  test_oversampling.py  test_visual_validation.py
tests/3d/: __init__.py  test_basic_projection_3d_to_2d.py  test_batching_3d_to_2d.py  test_cross_platform_3d_to_2d.py  test_gradients_3d_to_2d.py  test_performance_3d_to_2d.py  test_visual_validation_3d_to_2d.py
tests/3d/back/: test_basic_backprojection_2d_to_3d.py  test_basic_backprojection_3d.py  test_batching_3d.py  test_batching_back_2d_to_3d.py  test_cross_platform_back_2d_to_3d.py  test_gradients_3d.py  test_gradients_back_2d_to_3d.py  test_oversampling_back_2d_to_3d.py  test_performance_back_2d_to_3d.py
tests/3d/forw/: test_basic_projection_3d.py  test_basic_projection_3d_to_2d.py  test_batching_3d.py  test_batching_3d_to_2d.py  test_cross_platform_3d_to_2d.py  test_gradients_3d.py  test_oversampling_3d_to_2d.py  test_performance_3d_to_2d.py
torch_projectors/: __init__.py  ops.py
torch_projectors.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
