# pyproject.toml

[build-system]
requires = [
    "pybind11",
    "setuptools",
    "torch",  # Version determined by --extra-index-url passed from matrix
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for Python 3.9-3.13
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds, PyPy, and musllinux (PyTorch not available)
skip = "*-win32 *-manylinux_i686 *-musllinux* pp*"

# Install build requirements with matching PyTorch (moved to platform-specific sections)
# before-build = [] # Global before-build moved to platform sections

# Platform-specific configuration
[tool.cibuildwheel.macos]
# Build on Sequoia but target older macOS for compatibility
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
# Install delocate for wheel repair
before-build = "pip install pybind11 setuptools wheel numpy delocate"
# Skip wheel repair - PyTorch extensions don't need library bundling
repair-wheel-command = ""

[tool.cibuildwheel.linux]
# Use manylinux_2_28 following PyTorch's 2024 migration
# Compatible with RHEL 8+, Ubuntu 20.04+, Debian 11+
# Force manylinux_2_28 to match PyTorch wheel tags
manylinux-x86_64-image = "manylinux_2_28"
# Pass environment variables from GitHub Actions matrix
environment-pass = ["TORCH_PROJECTORS_BUILD_BACKEND", "TORCH_PROJECTORS_TORCH_VERSION", "TORCH_PROJECTORS_TORCH_INDEX", "TORCH_PROJECTORS_CUDA_VERSION"]
before-all = [
    # Handle both manylinux (yum) and musllinux (apk) package managers
    """
    if command -v yum >/dev/null 2>&1; then
        # manylinux (RHEL/CentOS based)
        yum update -y && yum install -y wget curl
        # Install GCC 13 (supported by CUDA 12.6)
        yum install -y gcc-toolset-13-gcc gcc-toolset-13-gcc-c++
        # Enable GCC 13 toolset
        source /opt/rh/gcc-toolset-13/enable
        if [[ "$TORCH_PROJECTORS_BUILD_BACKEND" == cuda* ]]; then
            # Use CUDA version from matrix or extract from backend name
            if [[ -n "$TORCH_PROJECTORS_CUDA_VERSION" ]]; then
                CUDA_VERSION_DOT="$TORCH_PROJECTORS_CUDA_VERSION"
            else
                CUDA_VERSION=$(echo $TORCH_PROJECTORS_BUILD_BACKEND | sed 's/cuda//')
                CUDA_VERSION_DOT="${CUDA_VERSION:0:2}.${CUDA_VERSION:2}"
            fi
            echo "Installing CUDA toolkit for version: $CUDA_VERSION_DOT"
            case "$CUDA_VERSION_DOT" in
                "12.6") CUDA_PKG="cuda-toolkit-12-6" ;;
                "12.8") CUDA_PKG="cuda-toolkit-12-8" ;;
                "12.9") CUDA_PKG="cuda-toolkit-12-9" ;;
                *) CUDA_PKG="cuda-toolkit-12-6" ;;
            esac
            wget https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
            cp cuda-rhel8.repo /etc/yum.repos.d/
            yum clean all && yum install -y $CUDA_PKG
            export PATH=/usr/local/cuda/bin:$PATH
            export LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH
        fi
    elif command -v apk >/dev/null 2>&1; then
        # musllinux (Alpine based)
        apk update && apk add --no-cache wget curl gcc g++ musl-dev
        # Note: CUDA not typically available on musllinux
    fi
    """
]
before-build = [
    "echo \"TORCH_PROJECTORS_BUILD_BACKEND is: $TORCH_PROJECTORS_BUILD_BACKEND\"",
    "echo \"TORCH_PROJECTORS_TORCH_VERSION is: $TORCH_PROJECTORS_TORCH_VERSION\"", 
    "echo \"TORCH_PROJECTORS_CUDA_VERSION is: $TORCH_PROJECTORS_CUDA_VERSION\"",
    # Set up GCC 13 for CUDA builds
    "if [[ \"$TORCH_PROJECTORS_BUILD_BACKEND\" == cuda* ]]; then echo \"Setting up GCC 13 for CUDA build: $TORCH_PROJECTORS_BUILD_BACKEND\" && source /opt/rh/gcc-toolset-13/enable && mkdir -p /tmp/gcc13-bin && ln -sf /opt/rh/gcc-toolset-13/root/usr/bin/gcc /tmp/gcc13-bin/gcc && ln -sf /opt/rh/gcc-toolset-13/root/usr/bin/g++ /tmp/gcc13-bin/g++ && ln -sf /opt/rh/gcc-toolset-13/root/usr/bin/g++ /tmp/gcc13-bin/c++ && export PATH=/tmp/gcc13-bin:$PATH && echo \"GCC 13 setup complete - gcc version: $(gcc --version | head -1)\" && echo \"PATH: $PATH\" && echo \"which gcc: $(which gcc)\" && echo \"which g++: $(which g++)\" && echo \"which c++: $(which c++)\"; else echo \"Using system GCC for CPU build: $(gcc --version | head -1)\"; fi",
    "pip install pybind11 setuptools wheel numpy auditwheel ninja",
    "TORCH_VERSION=${TORCH_PROJECTORS_TORCH_VERSION:-2.6.0}",
    "TORCH_INDEX=${TORCH_PROJECTORS_TORCH_INDEX:-https://download.pytorch.org/whl/cpu}",
    "echo \"Installing PyTorch $TORCH_VERSION from $TORCH_INDEX\"",
    "pip install --force-reinstall torch==$TORCH_VERSION --index-url $TORCH_INDEX",
    "echo \"=== PyTorch Installation Verification ===\"",
    "echo \"Installed PyTorch version: $(python -c 'import torch; print(torch.__version__)')\"",
    "echo \"PyTorch installation location: $(python -c 'import torch; print(torch.__file__)')\"",
    "echo \"CUDA available: $(python -c 'import torch; print(torch.cuda.is_available())')\"",
    "echo \"Python site-packages: $(python -c 'import site; print(site.getsitepackages())')\"",
    "find $(python -c 'import site; print(site.getsitepackages()[0])') -name 'torch*' -type d 2>/dev/null | head -5 || echo 'torch directories not found'"
]
# Skip bundling PyTorch libraries - users should have their own PyTorch  
repair-wheel-command = "auditwheel repair --exclude 'libtorch*.so' --exclude 'libc10*.so' -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install pybind11 setuptools wheel numpy delvewheel"
# Skip bundling PyTorch libraries - users should have their own PyTorch
repair-wheel-command = "delvewheel repair --exclude c10.dll --exclude torch_cpu.dll --exclude torch_python.dll --exclude torch.dll -w {dest_dir} {wheel}"

# Test command for all platforms - basic import test (Windows-compatible quotes)
test-command = "python -c \"import torch_projectors; print('torch-projectors imported successfully')\""
test-requires = ["pytest", "torch", "matplotlib"]

# Build variants - use environment variable passing without overrides
# The backend is passed from the GitHub Actions matrix directly 