# pyproject.toml

[build-system]
requires = [
    "pybind11",
    "setuptools",
    # torch installed in CIBW_BEFORE_ALL_LINUX to avoid build isolation issues
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = { name = "pip", args = ["--no-build-isolation"] }

# Build for Python 3.9-3.13
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds, PyPy, and musllinux (PyTorch not available)
skip = "*-win32 *-manylinux_i686 *-musllinux* pp*"

# Install build requirements with matching PyTorch (moved to platform-specific sections)
# before-build = [] # Global before-build moved to platform sections

# Platform-specific configuration
[tool.cibuildwheel.macos]
# Build on Sequoia but target older macOS for compatibility
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
# Install delocate for wheel repair
before-build = "pip install pybind11 setuptools wheel numpy delocate"
# Skip wheel repair - PyTorch extensions don't need library bundling
repair-wheel-command = ""

[tool.cibuildwheel.linux]
# Use manylinux_2_28 following PyTorch's 2024 migration
# Compatible with RHEL 8+, Ubuntu 20.04+, Debian 11+
# Force manylinux_2_28 to match PyTorch wheel tags
manylinux-x86_64-image = "manylinux_2_28"
# Pass environment variables from GitHub Actions matrix
environment-pass = ["TORCH_PROJECTORS_BUILD_BACKEND", "TORCH_PROJECTORS_TORCH_VERSION", "TORCH_PROJECTORS_TORCH_INDEX", "TORCH_PROJECTORS_CUDA_VERSION"]

# System-level setup (once per container)
before-all = """
# Install system dependencies and CUDA toolkit
yum update -y && yum install -y wget curl
yum install -y gcc-toolset-13-gcc gcc-toolset-13-gcc-c++
source /opt/rh/gcc-toolset-13/enable

# Install CUDA toolkit if needed
if [[ "$TORCH_PROJECTORS_BUILD_BACKEND" == cuda* ]]; then
    case "$TORCH_PROJECTORS_CUDA_VERSION" in
        "12.6") CUDA_PKG="cuda-toolkit-12-6" ;;
        "12.8") CUDA_PKG="cuda-toolkit-12-8" ;;  
        "12.9") CUDA_PKG="cuda-toolkit-12-9" ;;
        *) CUDA_PKG="cuda-toolkit-12-6" ;;
    esac
    echo "Installing CUDA toolkit: $CUDA_PKG"
    wget https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
    cp cuda-rhel8.repo /etc/yum.repos.d/
    yum clean all && yum install -y $CUDA_PKG
fi
"""

# Per-wheel setup (once per Python version) 
before-build = """
echo "=== Build Environment Setup ==="
echo "Backend: $TORCH_PROJECTORS_BUILD_BACKEND"
echo "PyTorch version: $TORCH_PROJECTORS_TORCH_VERSION"
echo "PyTorch index: $TORCH_PROJECTORS_TORCH_INDEX"
echo "Python version: $(python --version)"

# Set up GCC 13 for CUDA builds
if [[ "$TORCH_PROJECTORS_BUILD_BACKEND" == cuda* ]]; then
    echo "Setting up GCC 13 for CUDA build"
    source /opt/rh/gcc-toolset-13/enable
    mkdir -p /tmp/gcc13-bin
    ln -sf /opt/rh/gcc-toolset-13/root/usr/bin/gcc /tmp/gcc13-bin/gcc
    ln -sf /opt/rh/gcc-toolset-13/root/usr/bin/g++ /tmp/gcc13-bin/g++
    ln -sf /opt/rh/gcc-toolset-13/root/usr/bin/g++ /tmp/gcc13-bin/c++
    export PATH=/tmp/gcc13-bin:$PATH
    export CC=/tmp/gcc13-bin/gcc
    export CXX=/tmp/gcc13-bin/g++
    echo "GCC version: $(gcc --version | head -1)"
    export LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH
fi

# Install PyTorch for this Python version
echo "Installing PyTorch $TORCH_PROJECTORS_TORCH_VERSION for Python $(python --version)"
pip install torch==$TORCH_PROJECTORS_TORCH_VERSION --index-url $TORCH_PROJECTORS_TORCH_INDEX
echo "Installed PyTorch: $(python -c 'import torch; print(torch.__version__)')"
echo "PyTorch CUDA available: $(python -c 'import torch; print(torch.cuda.is_available())')"
"""

# Environment variables for build process
environment = """
CC=/tmp/gcc13-bin/gcc
CXX=/tmp/gcc13-bin/g++
PATH=/tmp/gcc13-bin:/opt/rh/gcc-toolset-13/root/usr/bin:$PATH
LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH
"""

# Skip bundling PyTorch libraries - users should have their own PyTorch  
repair-wheel-command = "auditwheel repair --exclude 'libtorch*.so' --exclude 'libc10*.so' -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install pybind11 setuptools wheel numpy delvewheel"
# Skip bundling PyTorch libraries - users should have their own PyTorch
repair-wheel-command = "delvewheel repair --exclude c10.dll --exclude torch_cpu.dll --exclude torch_python.dll --exclude torch.dll -w {dest_dir} {wheel}"

# Test command for all platforms - basic import test (Windows-compatible quotes)
test-command = "python -c \"import torch_projectors; print('torch-projectors imported successfully')\""
test-requires = ["pytest", "torch", "matplotlib"]

# Build variants - use environment variable passing without overrides
# The backend is passed from the GitHub Actions matrix directly 